[package]
name = "clock_helper"
version = "0.1.0"
edition = "2024"
authors = ["guilherme Silva Schultz <guilhermeSschultz.contato@gmail.com>"]
description = "utility to facilitate clock management on STM32 microcontrollers."
license = "MIT"
repository = "https://github.com/RecursiveError/ClockHelper-Rust"
keywords = ["clock", "STM32", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
serialize = ["dep:serde"]
STM32L4R9ZIYxP = []
STM32H7S3A8Ix = []
STM32F415ZGTx = []
STM32L063R8Tx = []
STM32L051K6_8Tx = []
STM32H7S7Z8Jx = []
STM32H7S7I8Tx = []
STM32H573IITxQ = []
STM32G441KBUx = []
STM32F469ZE_GTx = []
STM32F732IETx = []
STM32L552ZETx = []
STM32L031C4_6Tx = []
STM32H563IITx = []
STM32G031G4_6_8Ux = []
STM32G491MC_ETx = []
STM32L152VDTx = []
STM32MP235DALx = []
STM32L432KB_CUx = []
STM32F413CG_HUx = []
STM32L462CEUx = []
STM32F769BG_ITx = []
STM32F101R4_6Tx = []
STM32G491VC_ETx = []
STM32WB55VGQx = []
STM32F103RC_D_EYx = []
STM32G473MEYx = []
STM32F103C6Ux = []
STM32F439IG_ITx = []
STM32C091KCTx = []
STM32F072C8_BTx = []
STM32G0B1RB_C_ETxN = []
STM32F479NG_IHx = []
STM32L422TBYx = []
STM32L4P5ZG_ETx = []
STM32F303RD_ETx = []
STM32L422CBUx = []
STM32L4S9ZIJx = []
STM32L051R6_8Tx = []
STM32F469NIHx = []
STM32F042C4_6Tx = []
STM32WB05TZFx = []
STM32F103CBUx = []
STM32F301C8Yx = []
STM32L496RGTxP = []
STM32U575RITx = []
STM32F030CCTx = []
STM32L496WGYxP = []
STM32F446ZC_EHx = []
STM32L162RDTx = []
STM32G0C1KC_ETx = []
STM32U385KGUx = []
STM32L152R6_8_BTxA = []
STM32MP235FALx = []
STM32H523CCUx = []
STM32G491KC_EUx = []
STM32F100VC_D_ETx = []
STM32L4S9AIIx = []
STM32WB05KZVx = []
STM32L476VGYxP = []
STM32C051K6Tx = []
STM32F051C8Ux = []
STM32H563ZITxQ = []
STM32H562ZITx = []
STM32H562RGTx = []
STM32L442KCUx = []
STM32H573ZITxQ = []
STM32C092CCUx = []
STM32H7B0ABIxQ = []
STM32MP251FAIx = []
STM32F031K4_6Ux = []
STM32F303C6_8Tx = []
STM32F358RCTx = []
STM32L4S5QIIx = []
STM32MP151AAAx = []
STM32L431CB_CYx = []
STM32L462REYx = []
STM32U375VEIx = []
STM32L452REYxP = []
STM32U545CEUx = []
STM32L151ZDTx = []
STM32H563AGIx = []
STM32F091VB_CTx = []
STM32WB35CC_EUxA = []
STM32F423MHYx = []
STM32L011E3_4Yx = []
STM32F101ZC_D_ETx = []
STM32C091RBTx = []
STM32H573RIVx = []
STM32U031R8Ix = []
STM32L063C8Tx = []
STM32L031K4_6Tx = []
STM32L151RETx = []
STM32L496ZGTxP = []
STM32L431CB_CTx = []
STM32F439VG_ITx = []
STM32H7R7L8Hx = []
STM32WL5MOCHx = []
STM32C031F4_6Px = []
STM32F334K4_6_8Ux = []
STM32U585RITxQ = []
STM32L151VEYx = []
STM32N655X0HxQ = []
STM32L151C6_8_BUx = []
STM32L451RC_ETx = []
STM32F107VB_CTx = []
STM32L552QEIxP = []
STM32G4A1KEUx = []
STM32L4P5VG_EYx = []
STM32H753IITx = []
STM32F078CBTx = []
STM32U031R6Tx = []
STM32G030J6Mx = []
STM32G484METx = []
STM32H735ZGTx = []
STM32L041E6Yx = []
STM32MP151CABx = []
STM32L4P5AGIxP = []
STM32L476RC_E_GTx = []
STM32F078RBTx = []
STM32MP255DALx = []
STM32U5A5ZJTx = []
STM32L151R6_8_BHx = []
STM32MP131DAGx = []
STM32G0C1NEYx = []
STM32H7B3AIIxQ = []
STM32G471RC_ETx = []
STM32U073MBIx = []
STM32F756ZGYx = []
STM32MP255CAIx = []
STM32H7B3ZITx = []
STM32L073V8Tx = []
STM32H7S7A8Ix = []
STM32H7B3RITx = []
STM32H745IITx = []
STM32U5A5RJTxQ = []
STM32F303VEYx = []
STM32WBA52CGUx = []
STM32L4P5QGIxP = []
STM32F730I8Kx = []
STM32F413VG_HHx = []
STM32U595QJIx = []
STM32U5F9ZJTxQ = []
STM32L062K8Ux = []
STM32F439BG_ITx = []
STM32H573IIKxQ = []
STM32F410C8_BTx = []
STM32L4A6QGIx = []
STM32L010C6Tx = []
STM32MP131FAFx = []
STM32F446MC_EYx = []
STM32G0C1CC_EUxN = []
STM32L462VEIx = []
STM32F733ZEIx = []
STM32L151VCTx = []
STM32L041G6UxS = []
STM32G414MCTx = []
STM32F101ZF_GTx = []
STM32MP151DABx = []
STM32F051K6Ux = []
STM32U375CEUx = []
STM32F098VCTx = []
STM32F405RGTx = []
STM32MP233CAJx = []
STM32L4Q5CGUxP = []
STM32L496ZE_GTx = []
STM32MP235DAKx = []
STM32F469VE_GTx = []
STM32MP153DABx = []
STM32U575AIIxQ = []
STM32C071KBUx = []
STM32U5A5ZJYxQ = []
STM32H523ZCJx = []
STM32U599NJHxQ = []
STM32G031J4_6Mx = []
STM32L4R9VG_ITx = []
STM32G414VCTx = []
STM32N657B0HxQ = []
STM32L151RCTxA = []
STM32U595RJTxQ = []
STM32U585CIUxQ = []
STM32F745VE_GHx = []
STM32L010K8Tx = []
STM32G081GBUx = []
STM32MP231CAKx = []
STM32U575OGYxQ = []
STM32H573IIKx = []
STM32C092GCUx = []
STM32H7B3ZITxQ = []
STM32H743AG_IIx = []
STM32MP253AAIx = []
STM32F469AE_G_IYx = []
STM32C092KBUx = []
STM32WB15CCUx = []
STM32H725RGVx = []
STM32U375RGIxQ = []
STM32L471QE_GIx = []
STM32F302VD_EHx = []
STM32MP135FAFx = []
STM32G411CCUx = []
STM32L152RCTxA = []
STM32MP233AAKx = []
STM32L475VC_E_GTx = []
STM32L152RETx = []
STM32N655B0HxQ = []
STM32F071C8_BTx = []
STM32C051G8Ux = []
STM32F205RGEx = []
STM32N655Z0HxQ = []
STM32H755BITx = []
STM32WL54JCIx = []
STM32G071K6_8_BUx = []
STM32G491RC_ETx = []
STM32MP253CAKx = []
STM32MP233FALx = []
STM32U073H8Yx = []
STM32U375CGUx = []
STM32L552ZC_ETxQ = []
STM32H743IGTx = []
STM32MP235CALx = []
STM32F415VGTx = []
STM32H735IGKx = []
STM32G4A1RETx = []
STM32WLE4JBIx = []
STM32MP257DAJx = []
STM32MP255AAIx = []
STM32MP133DAGx = []
STM32F051K4Ux = []
STM32F417ZE_GTx = []
STM32L063C8Ux = []
STM32H747IITx = []
STM32N647X0HxQ = []
STM32F205RB_C_E_F_GTx = []
STM32L083CB_ZTx = []
STM32U375CGYxQ = []
STM32F048G6Ux = []
STM32C031K4_6Tx = []
STM32H743ZGTx = []
STM32F756ZGTx = []
STM32F469ZITx = []
STM32H523CETx = []
STM32F746ZE_GYx = []
STM32H7R3A8Ix = []
STM32L072KB_ZUx = []
STM32F217IE_GTx = []
STM32H745XGHx = []
STM32MP157CACx = []
STM32U073MCTx = []
STM32F401CD_EUx = []
STM32L072CB_ZYx = []
STM32G473QB_C_ETx = []
STM32H7B3IITx = []
STM32L4R9ZG_ITx = []
STM32L4S9ZIYx = []
STM32MP231FALx = []
STM32F769IGTx = []
STM32L4S7ZITx = []
STM32L4S5ZITx = []
STM32L151UCYx = []
STM32G411C6Tx = []
STM32U375RGYxG = []
STM32H7A3IG_ITx = []
STM32F071V8_BTx = []
STM32MP135AAGx = []
STM32U575VITx = []
STM32H742VG_IHx = []
STM32H563AIIxQ = []
STM32WLE5JCIx = []
STM32G474VB_C_ETx = []
STM32U599VITxQ = []
STM32H503RBTx = []
STM32F410R8_BIx = []
STM32MP153AACx = []
STM32F100R4_6Hx = []
STM32F723ZC_EIx = []
STM32MP135DAFx = []
STM32WL33K8Vx = []
STM32WL33C8Vx = []
STM32U375VETxQ = []
STM32F746VE_GHx = []
STM32H523ZETx = []
STM32F746ZETx = []
STM32G411KBTx = []
STM32MP255FALx = []
STM32C011F4_6Ux = []
STM32F302C8Yx = []
STM32F072RBHx = []
STM32U575QGIxQ = []
STM32H723VGHx = []
STM32MP135CAGx = []
STM32MP253DAJx = []
STM32U5A5RJTx = []
STM32MP157DADx = []
STM32U585CITx = []
STM32F469AE_G_IHx = []
STM32U535VETxQ = []
STM32C051C8Tx = []
STM32G491REYx = []
STM32H562IGKx = []
STM32G081CBUx = []
STM32MP157AADx = []
STM32U575RGTxQ = []
STM32F777IIKx = []
STM32U5A5AJHxQ = []
STM32F070RBTx = []
STM32L072KB_ZTx = []
STM32U595QJIxQ = []
STM32G474RB_C_ETx = []
STM32L496QE_GIx = []
STM32MP235DAJx = []
STM32C071F8Px = []
STM32L152C6_8_BTxA = []
STM32MP253CALx = []
STM32U575ZGTx = []
STM32G411M8Tx = []
STM32G473CB_C_EUx = []
STM32F767VGHx = []
STM32F723ZC_ETx = []
STM32G081EBYx = []
STM32MP255DAJx = []
STM32H7R3V8Tx = []
STM32L431VCTx = []
STM32L073CB_ZTx = []
STM32U375CGTxQ = []
STM32C031G4_6Ux = []
STM32MP251CAIx = []
STM32L152C6_8_BUxA = []
STM32H503EBYx = []
STM32U535RCIxQ = []
STM32F107RB_CTx = []
STM32F038G6Ux = []
STM32L562VETxQ = []
STM32F479ZG_ITx = []
STM32G041C6_8Tx = []
STM32L562MEYxQ = []
STM32H725AEIx = []
STM32G441CBTx = []
STM32L151C6_8_BUxA = []
STM32L071RB_ZHx = []
STM32F746VGTx = []
STM32L151R6_8_BTx = []
STM32F058R8Tx = []
STM32U535CCUxQ = []
STM32L462CETx = []
STM32C092GBUx = []
STM32F098CCTx = []
STM32L151VDTxX = []
STM32G0C1KC_EUxN = []
STM32L062K8Tx = []
STM32G484MEYx = []
STM32F072V8_BHx = []
STM32U375REIxQ = []
STM32F750Z8Tx = []
STM32H742VG_ITx = []
STM32U585AIIxQ = []
STM32G041F6_8Px = []
STM32G0C1RC_ETx = []
STM32U545VETx = []
STM32L4P5CG_EUx = []
STM32L152UCYx = []
STM32WLE5CCUx = []
STM32F745IE_GTx = []
STM32L4Q5RGTxP = []
STM32H7R3R8Vx = []
STM32C071C8Tx = []
STM32H743IIKx = []
STM32L451CC_EUx = []
STM32L151VDTx = []
STM32L152CCTx = []
STM32U535RBIxQ = []
STM32WB09KEVx = []
STM32G0B1KB_C_EUxN = []
STM32G0C1VC_EIx = []
STM32F765ZG_ITx = []
STM32F215ZE_GTx = []
STM32N655I0HxQ = []
STM32G411C6Ux = []
STM32U535RETx = []
STM32L476QGIxP = []
STM32WLE4CCUx = []
STM32U375REYxG = []
STM32MP257CAIx = []
STM32F429VE_GTx = []
STM32U5F9BJYxQ = []
STM32C092RCTx = []
STM32U073HBYx = []
STM32G411C8Ux = []
STM32WB55VGYx = []
STM32H7S3V8Hx = []
STM32G431M6_8_BTx = []
STM32U5F9ZITxQ = []
STM32L4R5ZG_ITx = []
STM32L152QEHx = []
STM32L021K4Ux = []
STM32H563RGTx = []
STM32U575ZITxQ = []
STM32G411K6Ux = []
STM32MP251AAKx = []
STM32F051C6Ux = []
STM32N645L0HxQ = []
STM32L4A6AGIxP = []
STM32U599VJTxQ = []
STM32F303VB_CTx = []
STM32L412R8Tx = []
STM32F051C8Tx = []
STM32U031R6Ix = []
STM32N645I0HxQ = []
STM32L486RGTx = []
STM32H533CEUx = []
STM32F407VE_GTx = []
STM32MP133AAEx = []
STM32MP235FAKx = []
STM32G411M6Tx = []
STM32L083CZUx = []
STM32G414CCUx = []
STM32L062C8Ux = []
STM32MP253DALx = []
STM32F411CC_EYx = []
STM32MP151DACx = []
STM32L162ZDTx = []
STM32L4R7AIIx = []
STM32G491CC_EUx = []
STM32C092RCIx = []
STM32H7A3ZG_ITxQ = []
STM32MP157FAAx = []
STM32H562IGTx = []
STM32C091RCTx = []
STM32L4R5ZG_IYx = []
STM32MP157AAAx = []
STM32H562VITx = []
STM32U031F6Px = []
STM32H7B3VITx = []
STM32MP151DAAx = []
STM32MP255FAJx = []
STM32L071VB_ZTx = []
STM32L053C6_8Tx = []
STM32WBA55UGIx = []
STM32F777IITx = []
STM32H730IBTxQ = []
STM32MP255FAKx = []
STM32C092FCPx = []
STM32F078VBHx = []
STM32C071C8TxN = []
STM32L431VCIx = []
STM32H725VGHx = []
STM32U375KGUx = []
STM32H563IGTx = []
STM32F072V8_BTx = []
STM32U375RGIx = []
STM32F207IC_E_F_GHx = []
STM32G414RCTx = []
STM32U031C8Tx = []
STM32H7R3I8Kx = []
STM32L4R9ZG_IJx = []
STM32F101T8_BUx = []
STM32U031G6Yx = []
STM32L031C4_6Ux = []
STM32F328C8Tx = []
STM32F051T8Yx = []
STM32MP157DAAx = []
STM32MP253AAJx = []
STM32G414MBTx = []
STM32C051G6Ux = []
STM32U595QIIxQ = []
STM32L082KB_ZTx = []
STM32L496VGYx = []
STM32C051D8Yx = []
STM32G081KBTxN = []
STM32H742ZG_ITx = []
STM32G0B1KB_C_ETx = []
STM32F358VCTx = []
STM32L496AE_GIx = []
STM32F429IE_GTx = []
STM32G471CC_EUx = []
STM32U031C6Tx = []
STM32F401VB_CHx = []
STM32F058R8Hx = []
STM32U545RETx = []
STM32F051R8Hx = []
STM32H563RIVx = []
STM32F091RB_CTx = []
STM32H563ZGTx = []
STM32F765VG_IHx = []
STM32F730R8Tx = []
STM32U575RGTx = []
STM32L031E4_6Yx = []
STM32F373R8_B_CTx = []
STM32L072RB_ZIx = []
STM32F429NE_GHx = []
STM32G0C1RC_EIxN = []
STM32C071FBPx = []
STM32G483VETx = []
STM32L412CBTx = []
STM32U535RCTxQ = []
STM32L162RCTx = []
STM32U385VGTx = []
STM32G031Y8Yx = []
STM32G441VBTx = []
STM32L162VETx = []
STM32F401RB_CTx = []
STM32G471MC_ETx = []
STM32F098RCHx = []
STM32L433RB_CIx = []
STM32U5A5ZJTxQ = []
STM32C071C8Ux = []
STM32F401VB_CTx = []
STM32C051K8Tx = []
STM32L4P5ZGTxP = []
STM32U375REYxQ = []
STM32F765VG_ITx = []
STM32F746BE_GTx = []
STM32MP151DADx = []
STM32C051F6Px = []
STM32MP133AAGx = []
STM32U599VJTx = []
STM32C092CBTx = []
STM32L452CETxP = []
STM32G414VBTx = []
STM32C092FBPx = []
STM32H7S3L8Hx = []
STM32MP153FABx = []
STM32L152VETx = []
STM32F207VC_E_F_GTx = []
STM32F779BITx = []
STM32C092KCTx = []
STM32H7A3VG_ITx = []
STM32L476JE_GYx = []
STM32H743VITx = []
STM32H503CBUx = []
STM32MP233CALx = []
STM32H755IIKx = []
STM32L422CBTx = []
STM32C071G8Ux = []
STM32G081KBUx = []
STM32H7R3V8Hx = []
STM32H563IIKxQ = []
STM32H725VGYx = []
STM32L4R5ZITxP = []
STM32G473PB_C_EIx = []
STM32F745IE_GKx = []
STM32N647Z0HxQ = []
STM32N657X0HxQ = []
STM32U575CGUx = []
STM32F411CC_EUx = []
STM32U575QGIx = []
STM32H562RGVx = []
STM32L041G6Ux = []
STM32F103C4_6Tx = []
STM32F479AG_IYx = []
STM32F412RE_GYx = []
STM32L151ZCTx = []
STM32H747ZIYx = []
STM32G081KBUxN = []
STM32G483VEHx = []
STM32H745BGTx = []
STM32F423ZHJx = []
STM32U585ZITx = []
STM32U535VCTx = []
STM32H735AGIx = []
STM32L562RETxQ = []
STM32U585CITxQ = []
STM32F429IE_G_IHx = []
STM32F429AG_IHx = []
STM32G483CEUx = []
STM32G484VEHx = []
STM32G483RETx = []
STM32L4Q5AGIx = []
STM32U031G8Yx = []
STM32H742BG_ITx = []
STM32WLE5J8Ix = []
STM32F413RG_HTx = []
STM32L562ZETxQ = []
STM32F070C6Tx = []
STM32F437IG_IHx = []
STM32G473RETxZ = []
STM32WL55JCIx = []
STM32L051K6_8Ux = []
STM32L031F4_6Px = []
STM32F437AIHx = []
STM32U031C6Ux = []
STM32H747XGHx = []
STM32C071K8Tx = []
STM32U599ZJTxQ = []
STM32L071RB_ZTx = []
STM32F301K6_8Ux = []
STM32C071K8Ux = []
STM32L010RBTx = []
STM32U5G9VJTxQ = []
STM32G071K8_BTxN = []
STM32U545NEYxQ = []
STM32L162VCTx = []
STM32MP153DACx = []
STM32H743ZITx = []
STM32L100C6Ux = []
STM32G041G6_8Ux = []
STM32MP135FAEx = []
STM32F722ZC_ETx = []
STM32F769IITx = []
STM32L4Q5RGTx = []
STM32N647I0HxQ = []
STM32F103T8_BUx = []
STM32L4Q5CGTxP = []
STM32C091GCUx = []
STM32H523CEUx = []
STM32MP251CAJx = []
STM32G411K8Ux = []
STM32U073KCUx = []
STM32G0B1NEYx = []
STM32U385VGIxQ = []
STM32C071G8UxN = []
STM32L152R6_8_BTx = []
STM32U385CGUxQ = []
STM32L433VCTx = []
STM32U595AJHx = []
STM32F098RCTx = []
STM32MP131DAEx = []
STM32G0B1CB_C_EUx = []
STM32N657A0HxQ = []
STM32L152VCTxA = []
STM32G491RC_EIx = []
STM32F439IG_IHx = []
STM32H563ZITx = []
STM32C071CBTxN = []
STM32G031K4_6_8Tx = []
STM32F765IG_ITx = []
STM32F318C8Tx = []
STM32F042K4_6Ux = []
STM32G071K8_BUxN = []
STM32L4S7VITx = []
STM32F042K4_6Tx = []
STM32MP251CAKx = []
STM32L422KBUx = []
STM32F100ZC_D_ETx = []
STM32MP153FADx = []
STM32L151RCYx = []
STM32U599NIHxQ = []
STM32U375VEIxQ = []
STM32L081CB_ZTx = []
STM32U375REIx = []
STM32WB55VEQx = []
STM32H757BITx = []
STM32H7S3V8Yx = []
STM32F469VITx = []
STM32F412VE_GHx = []
STM32L4Q5VGTxP = []
STM32H730IBKxQ = []
STM32U595QIIx = []
STM32MP157FACx = []
STM32L162ZCTx = []
STM32MP251DAJx = []
STM32L4R5QGIxS = []
STM32U5A9NJHxQ = []
STM32F779AIYx = []
STM32WBA52KEUx = []
STM32F071RBTx = []
STM32L071C8Tx = []
STM32F410R8_BTx = []
STM32U535CBTxQ = []
STM32H743VG_IHx = []
STM32G473VB_C_ETx = []
STM32C071KBUxN = []
STM32F048T6Yx = []
STM32U073MBTx = []
STM32F429VITx = []
STM32F101VF_GTx = []
STM32F103R8_BTx = []
STM32H745IGTx = []
STM32F745ZE_GTx = []
STM32U545CETx = []
STM32H7B0RBTx = []
STM32WLE5CBUx = []
STM32U575AIIx = []
STM32F401RD_ETx = []
STM32H733VGHx = []
STM32G030K6_8Tx = []
STM32F439AIHx = []
STM32H7R3I8Tx = []
STM32G4A1CEUx = []
STM32F302RD_ETx = []
STM32L073RB_ZHx = []
STM32G491CC_ETx = []
STM32F051R8Tx = []
STM32MP255CAKx = []
STM32F429IITx = []
STM32F205VB_C_E_F_GTx = []
STM32H742AG_IIx = []
STM32L486JGYx = []
STM32L152V8_BHxA = []
STM32H7R7A8Ix = []
STM32L071V8Tx = []
STM32U575ZITx = []
STM32H742IG_ITx = []
STM32WB07CCFx = []
STM32L011K3_4Tx = []
STM32MP133FAGx = []
STM32U545VEIx = []
STM32L552MEYxQ = []
STM32L562RETx = []
STM32MP253DAKx = []
STM32C011J4_6Mx = []
STM32U595VJTx = []
STM32G474MEYx = []
STM32H725ZETx = []
STM32MP233AALx = []
STM32WLE4J8Ix = []
STM32MP255AAKx = []
STM32L071VB_ZIx = []
STM32H735VGHx = []
STM32H7A3NG_IHx = []
STM32WB5MMGHx = []
STM32U073CBUx = []
STM32U595ZJTx = []
STM32L452RC_EIx = []
STM32F030C6Tx = []
STM32G414CCTx = []
STM32H743XGHx = []
STM32C092KBTx = []
STM32MP257AAKx = []
STM32L151V8_BTxA = []
STM32G441RBTx = []
STM32WBA52CEUx = []
STM32H733ZGTx = []
STM32F051K8Ux = []
STM32MP255DAKx = []
STM32L162VCTxA = []
STM32U031F8Px = []
STM32C071GBUxN = []
STM32L476ZE_GTx = []
STM32H533RETx = []
STM32L100R8_BTxA = []
STM32H743BITx = []
STM32G0C1RC_ETxN = []
STM32U575OIYxQ = []
STM32F101V8_BTx = []
STM32G0B1KB_C_EUx = []
STM32L151QDHx = []
STM32C031C4_6Ux = []
STM32H753AIIx = []
STM32MP253AAKx = []
STM32N645Z0HxQ = []
STM32G411MBTx = []
STM32MP151CADx = []
STM32U5F9VJTxQ = []
STM32F101C8_BTx = []
STM32L496QGIxP = []
STM32WLE4JCIx = []
STM32U535RBTx = []
STM32L052C6_8Tx = []
STM32H755XIHx = []
STM32U535REIx = []
STM32MP235CAKx = []
STM32U535CETx = []
STM32F413ZG_HJx = []
STM32F302VD_ETx = []
STM32G473CB_C_ETx = []
STM32U073M8Tx = []
STM32L162VDYxX = []
STM32F103RC_D_ETx = []
STM32MP153DAAx = []
STM32H753IIKx = []
STM32U5A5AJHx = []
STM32G411MCTx = []
STM32U375VGTxQ = []
STM32F767VGTx = []
STM32L486ZGTx = []
STM32G441CBUx = []
STM32L071V8Ix = []
STM32MP255CALx = []
STM32H747XIHx = []
STM32H7S3I8Tx = []
STM32U375RGTx = []
STM32L4S5ZIYx = []
STM32F302CB_CTx = []
STM32MP253FAKx = []
STM32F732RETx = []
STM32F733IEKx = []
STM32C071KBTxN = []
STM32MP131FAGx = []
STM32F334K4_6_8Tx = []
STM32G031K4_6_8Ux = []
STM32MP233FAKx = []
STM32H757XIHx = []
STM32N657I0HxQ = []
STM32MP235CAJx = []
STM32G471CC_ETx = []
STM32G441CBYx = []
STM32F217IE_GHx = []
STM32L083VB_ZIx = []
STM32H730VBHx = []
STM32L4Q5VGTx = []
STM32L152VCTx = []
STM32F756VGTx = []
STM32MP251DAIx = []
STM32H7B3VIHxQ = []
STM32L152RDTx = []
STM32F427AG_IHx = []
STM32MP251FALx = []
STM32WBA50KGUx = []
STM32L082CZUx = []
STM32L151VCHx = []
STM32F318C8Yx = []
STM32L476QE_GIx = []
STM32F767VITx = []
STM32U595AIHxQ = []
STM32H730VBTx = []
STM32F038K6Ux = []
STM32L081CZUx = []
STM32MP235AALx = []
STM32U5F7VITx = []
STM32WB15CCUxE = []
STM32H7B3IIKx = []
STM32F051K4Tx = []
STM32U585AIIx = []
STM32U5A9ZJYxQ = []
STM32L562CEUx = []
STM32MP231FAKx = []
STM32N647A0HxQ = []
STM32F768AIYx = []
STM32H753BITx = []
STM32H7A3RG_ITx = []
STM32MP253FALx = []
STM32F756NGHx = []
STM32F030RCTx = []
STM32F746IGTx = []
STM32H725VETx = []
STM32H523ZCTx = []
STM32F745VE_GTx = []
STM32F103VC_D_EHx = []
STM32U535RBTxQ = []
STM32G441MBTx = []
STM32U073RCIx = []
STM32L053R6_8Tx = []
STM32F446VC_ETx = []
STM32G411R6Tx = []
STM32MP231CAJx = []
STM32L4Q5VGYx = []
STM32L151RDTx = []
STM32MP157CADx = []
STM32U5G9BJYxQ = []
STM32G431K6_8_BTx = []
STM32L051T6_8Yx = []
STM32G071R6_8_BTx = []
STM32H7S3R8Vx = []
STM32WBA55HGFx = []
STM32H747AG_IIx = []
STM32L4R7VITx = []
STM32H725VEHx = []
STM32G483QETx = []
STM32F730Z8Tx = []
STM32MP133CAGx = []
STM32H533HEYx = []
STM32H563VITxQ = []
STM32MP233FAJx = []
STM32G491RETxZ = []
STM32H7S3V8Tx = []
STM32MP231DALx = []
STM32N647L0HxQ = []
STM32H7B3LIHxQ = []
STM32L152RDYx = []
STM32U575CITx = []
STM32F207ZC_E_F_GTx = []
STM32U385RGIxQ = []
STM32L073CZYx = []
STM32U5F7VJTx = []
STM32L431RB_CTx = []
STM32H533VETx = []
STM32H757ZIYx = []
STM32L433VCIx = []
STM32F303C8Yx = []
STM32F767ZGTx = []
STM32G431C6_8_BTx = []
STM32WB55CCUx = []
STM32L152CCUx = []
STM32U575VGTx = []
STM32H745BITx = []
STM32MP253CAIx = []
STM32L562QEIxP = []
STM32U385CGTx = []
STM32G431CBYx = []
STM32F103ZF_GHx = []
STM32L011F3_4Px = []
STM32U375CGUxQ = []
STM32F051R4Tx = []
STM32F058C8Ux = []
STM32F378CCTx = []
STM32C071CBUx = []
STM32L162QDHx = []
STM32U585CIUx = []
STM32N645X0HxQ = []
STM32H573VITxQ = []
STM32U575VITxQ = []
STM32WBA54CGUx = []
STM32L4P5AG_EIx = []
STM32F070CBTx = []
STM32F723IC_EKx = []
STM32U375VGTx = []
STM32MP255FAIx = []
STM32F217ZE_GTx = []
STM32F765NG_IHx = []
STM32F103V8_BHx = []
STM32F078CBYx = []
STM32U375CGTx = []
STM32C051C6Ux = []
STM32C092CCTx = []
STM32L552VETx = []
STM32MP135CAFx = []
STM32G473RB_C_ETx = []
STM32F091RCHx = []
STM32F303K6_8Ux = []
STM32L4A6RGTx = []
STM32U575QIIx = []
STM32H7A3IG_ITxQ = []
STM32MP251CALx = []
STM32L496QGIxS = []
STM32F750N8Hx = []
STM32MP133DAFx = []
STM32L443RCTx = []
STM32L151VDYxX = []
STM32MP151FAAx = []
STM32G4A1MESx = []
STM32U585QIIx = []
STM32U575CGTx = []
STM32H562AIIx = []
STM32H523VCTx = []
STM32L562ZETx = []
STM32U5A5QJIx = []
STM32H7R3V8Yx = []
STM32L462VETx = []
STM32U031K8Ux = []
STM32U575VGTxQ = []
STM32U5G9NJHxQ = []
STM32C091CBTx = []
STM32F071C8_BUx = []
STM32L162VEYx = []
STM32MP257CAKx = []
STM32MP255AAJx = []
STM32F303CB_CTx = []
STM32C071C8UxN = []
STM32U5A9VJTxQ = []
STM32L162VDTx = []
STM32L452CC_EUx = []
STM32MP255AALx = []
STM32U5A5QJIxQ = []
STM32H563IGKx = []
STM32F378RCYx = []
STM32F334R6_8Tx = []
STM32L151R6_8_BHxA = []
STM32N657Z0HxQ = []
STM32L083VB_ZTx = []
STM32F301C6_8Tx = []
STM32G4A1CETx = []
STM32H533ZETx = []
STM32F302C6_8Tx = []
STM32MP135AAEx = []
STM32H523RETx = []
STM32WB06CCFx = []
STM32H723ZGTx = []
STM32L4P5CGUxP = []
STM32L4P5VGYxP = []
STM32F091CB_CTx = []
STM32F098RCYx = []
STM32G473QETxZ = []
STM32H563AIIx = []
STM32G0C1CC_ETxN = []
STM32F070F6Px = []
STM32G411CBTx = []
STM32H7B0IBTx = []
STM32U535CETxQ = []
STM32MP257CAJx = []
STM32F429ZGYx = []
STM32L4R9AG_IIx = []
STM32F777BITx = []
STM32MP251DALx = []
STM32F078RBHx = []
STM32C071R8Tx = []
STM32G471QC_ETx = []
STM32MP151FACx = []
STM32G0B1CB_C_ETxN = []
STM32U375RETxQ = []
STM32H742IG_IKx = []
STM32G471VC_ETx = []
STM32WB1MMCHx = []
STM32G431R6_8_BTx = []
STM32L151V8_BHxA = []
STM32L152VEYx = []
STM32F051C4Ux = []
STM32L4Q5ZGTxP = []
STM32L151C6_8_BTx = []
STM32WB06KCVx = []
STM32G411KBUx = []
STM32G431CBTxZ = []
STM32F107VCHx = []
STM32MP157CAAx = []
STM32U375CETx = []
STM32H743IGKx = []
STM32L162ZETx = []
STM32H747BGTx = []
STM32F769NGHx = []
STM32L151ZETx = []
STM32F051C6Tx = []
STM32U595AJHxQ = []
STM32F732VETx = []
STM32L452RETxP = []
STM32L151V8_BHx = []
STM32C071K8TxN = []
STM32H7R7I8Kx = []
STM32L152R6_8_BHx = []
STM32L452VC_EIx = []
STM32L052R6_8Hx = []
STM32F215RE_GTx = []
STM32L021G4Ux = []
STM32F756IGKx = []
STM32MP251FAJx = []
STM32U375RETx = []
STM32L4R7ZITx = []
STM32WB55CEUx = []
STM32F429ZE_GTx = []
STM32L4S9VITx = []
STM32G081GBUxN = []
STM32L152RCTx = []
STM32H523RCTx = []
STM32H753VIHx = []
STM32F101C8_BUx = []
STM32G491MC_ESx = []
STM32F437IG_ITx = []
STM32F407IE_GHx = []
STM32U073KBUx = []
STM32L041C6Ux = []
STM32F301R6_8Tx = []
STM32F733VEYx = []
STM32F303RB_CTx = []
STM32U031C8Ux = []
STM32U595VITxQ = []
STM32F479IG_IHx = []
STM32C092ECYx = []
STM32L496AGIxP = []
STM32L051C6_8Tx = []
STM32MP257DALx = []
STM32U535RCIx = []
STM32N655L0HxQ = []
STM32L082KB_ZUx = []
STM32F750V8Tx = []
STM32U073RCTx = []
STM32MP253FAIx = []
STM32L010F4Px = []
STM32H750IBTx = []
STM32F412RE_GTx = []
STM32F215VE_GTx = []
STM32MP153AABx = []
STM32MP231AAKx = []
STM32H7R7L8HxH = []
STM32WL33KBVx = []
STM32G474QB_C_ETx = []
STM32F051K8Tx = []
STM32WL33KCVx = []
STM32L4P5VG_ETx = []
STM32U073K8Ux = []
STM32U5A5VJTx = []
STM32F777ZITx = []
STM32L451VC_EIx = []
STM32G031F4_6_8Px = []
STM32F318K8Ux = []
STM32U535RCTx = []
STM32H743XIHx = []
STM32G474PB_C_EIx = []
STM32G484QETx = []
STM32U575AGIxQ = []
STM32L552RC_ETx = []
STM32H7R3Z8Tx = []
STM32H747BITx = []
STM32U535VEIxQ = []
STM32F100C4_6Tx = []
STM32F205ZC_E_F_GTx = []
STM32MP251AALx = []
STM32L471VE_GTx = []
STM32U083HCYx = []
STM32H7B0VBTx = []
STM32L422RBTx = []
STM32U535VETx = []
STM32MP231AALx = []
STM32F102C4_6Tx = []
STM32H757AIIx = []
STM32L552QC_EIxQ = []
STM32L021D4Px = []
STM32L562QEIxQ = []
STM32U545CEUxQ = []
STM32F105V8_B_CTx = []
STM32L152QCHx = []
STM32U385RGYxQ = []
STM32H533CETx = []
STM32L552VC_ETxQ = []
STM32G031C4_6_8Ux = []
STM32C071FBYx = []
STM32F030R8Tx = []
STM32G0C1KC_ETxN = []
STM32F423VHHx = []
STM32G484CEUx = []
STM32F777NIHx = []
STM32L412TBYx = []
STM32L412CBUxP = []
STM32F769NIHx = []
STM32L431CB_CUx = []
STM32L562CETxP = []
STM32WB09TEFx = []
STM32F779IITx = []
STM32C071R8TxN = []
STM32MP157CABx = []
STM32MP253AALx = []
STM32U575CGTxQ = []
STM32G431K6_8_BUx = []
STM32MP235AAKx = []
STM32C071RBTx = []
STM32WBA54KEUx = []
STM32L496VGTxP = []
STM32F303VCYx = []
STM32U575CITxQ = []
STM32H750IBKx = []
STM32WB07CCVx = []
STM32F779NIHx = []
STM32F103V8_BTx = []
STM32L451CETx = []
STM32L100R8_BTx = []
STM32H563IIKx = []
STM32G071G6_8_BUx = []
STM32L412R8Ix = []
STM32G081RBTx = []
STM32L4R5AG_IIx = []
STM32MP153AAAx = []
STM32H573VITx = []
STM32L151R6_8_BTxA = []
STM32C011F4_6Px = []
STM32U595RITx = []
STM32F746IETx = []
STM32C071GBUx = []
STM32U595ZITxQ = []
STM32H562VGTx = []
STM32C071CBTx = []
STM32C092CBUx = []
STM32MP133AAFx = []
STM32F102C8_BTx = []
STM32WB55VEYx = []
STM32G474CB_C_ETx = []
STM32H7B3VITxQ = []
STM32U385VGTxQ = []
STM32L412K8Ux = []
STM32G0C1CC_EUx = []
STM32MP157AACx = []
STM32U083RCTx = []
STM32L4P5CGTxP = []
STM32U545CETxQ = []
STM32F437VG_ITx = []
STM32C071RBTxN = []
STM32U5G9ZJJxQ = []
STM32C091ECYx = []
STM32U385RGTx = []
STM32H723ZGIx = []
STM32F411VC_ETx = []
STM32U375RGTxQ = []
STM32F427IG_IHx = []
STM32F767BG_ITx = []
STM32L4A6ZGTx = []
STM32WB55REVx = []
STM32F723VC_EYx = []
STM32WLE5C8Ux = []
STM32L072RB_ZTx = []
STM32L552CC_ETx = []
STM32MP131CAGx = []
STM32G471VC_EIx = []
STM32U535REIxQ = []
STM32H753VITx = []
STM32F031K6Tx = []
STM32L051C6_8Ux = []
STM32C091CBUx = []
STM32WB50CGUx = []
STM32G431V6_8_BTx = []
STM32G474CB_C_EUx = []
STM32L4Q5VGYxP = []
STM32H562RITx = []
STM32U535CCTxQ = []
STM32F101VC_D_ETx = []
STM32F413ZG_HTx = []
STM32H523CCTx = []
STM32MP251AAIx = []
STM32L422KBTx = []
STM32L412TBYxP = []
STM32H573RITx = []
STM32L4A6RGTxP = []
STM32H562ZGTx = []
STM32U375VETx = []
STM32MP131AAEx = []
STM32F437ZG_ITx = []
STM32MP133FAFx = []
STM32H743IITx = []
STM32F031C4_6Tx = []
STM32F030F4Px = []
STM32U375CETxQ = []
STM32G474VB_C_EHx = []
STM32H725VGTx = []
STM32F101C4_6Tx = []
STM32F103ZF_GTx = []
STM32F413VG_HTx = []
STM32G0C1MC_ETx = []
STM32U073C8Tx = []
STM32H533ZEJx = []
STM32F765IG_IKx = []
STM32U073CCTx = []
STM32L562MEYxP = []
STM32L021F4Px = []
STM32U5G7VJTx = []
STM32L562CEUxP = []
STM32U535NCYxQ = []
STM32MP257FAKx = []
STM32G411R8Tx = []
STM32U545RETxQ = []
STM32H750VBTx = []
STM32WBA55UEIx = []
STM32F303ZD_ETx = []
STM32L412CBTxP = []
STM32H7A3VG_ITxQ = []
STM32G041C6_8Ux = []
STM32F103RF_GTx = []
STM32H730ZBIx = []
STM32U083CCTx = []
STM32WB55CGUx = []
STM32G471VC_EHx = []
STM32L071KB_ZTx = []
STM32H723VGTx = []
STM32U073R8Ix = []
STM32WBA55CGUx = []
STM32L152QDHx = []
STM32C051F8Px = []
STM32N645B0HxQ = []
STM32F373C8_B_CTx = []
STM32L4S5VITx = []
STM32H7A3QIYxQ = []
STM32U585VITx = []
STM32F098VCHx = []
STM32F058T8Yx = []
STM32F101RC_D_ETx = []
STM32U535CEUx = []
STM32WB10CCUx = []
STM32L4P5CG_ETx = []
STM32F411RC_ETx = []
STM32H7A3VG_IHx = []
STM32G0B1RB_C_EIxN = []
STM32MP153CACx = []
STM32F401CCFx = []
STM32L4Q5CGUx = []
STM32U385VGIx = []
STM32F746NEHx = []
STM32G0B1VB_C_EIx = []
STM32U595RJTx = []
STM32L031K4_6Ux = []
STM32MP251AAJx = []
STM32MP233AAJx = []
STM32F302VCYx = []
STM32F091RCYx = []
STM32H7A3VG_IHxQ = []
STM32MP151CAAx = []
STM32L412RBIxP = []
STM32C091KBTx = []
STM32H747IGTx = []
STM32MP131CAEx = []
STM32H745IGKx = []
STM32F042G4_6Ux = []
STM32L162VCHx = []
STM32L4Q5ZGTx = []
STM32U073HCYx = []
STM32F401VD_EHx = []
STM32F071V8_BHx = []
STM32MP233CAKx = []
STM32U585OIYxQ = []
STM32U385CGTxQ = []
STM32U385CGYxQ = []
STM32F429ZIYx = []
STM32MP153CADx = []
STM32U535RBIx = []
STM32C051C6Tx = []
STM32L433RB_CYx = []
STM32F101T4_6Ux = []
STM32H753XIHx = []
STM32L412RBTx = []
STM32L031G6UxS = []
STM32L072CB_ZTx = []
STM32L452RC_EYx = []
STM32L071K8Ux = []
STM32G484PEIx = []
STM32F103ZC_D_ETx = []
STM32F072RBIx = []
STM32MP151AADx = []
STM32G0B1MB_C_ETx = []
STM32L443CCTx = []
STM32U375KEUx = []
STM32L151QEHx = []
STM32G4A1METx = []
STM32L072VB_ZTx = []
STM32L462REIx = []
STM32H743VGTx = []
STM32H725IGKx = []
STM32L4Q5AGIxP = []
STM32F100R8_BTx = []
STM32H753ZITx = []
STM32F102R8_BTx = []
STM32F722IC_EKx = []
STM32L486QGIx = []
STM32L152V8_BTxA = []
STM32F746ZGTx = []
STM32L072CB_ZUx = []
STM32MP253FAJx = []
STM32F401VD_ETx = []
STM32L053R6_8Hx = []
STM32H7A3AG_IIxQ = []
STM32L151RDYx = []
STM32MP151AACx = []
STM32L412KBTx = []
STM32U535VCTxQ = []
STM32F446RC_ETx = []
STM32F302R6_8Tx = []
STM32L071KB_ZUx = []
STM32N645A0HxQ = []
STM32G030C6_8Tx = []
STM32G081KBTx = []
STM32F415OGYx = []
STM32H563RGVx = []
STM32U5F9NJHxQ = []
STM32F103R4_6Hx = []
STM32H723ZETx = []
STM32U585VITxQ = []
STM32WB55RGVx = []
STM32F031G4_6Ux = []
STM32G0C1VC_ETx = []
STM32H573AIIx = []
STM32MP131FAEx = []
STM32F746IE_GKx = []
STM32MP235AAJx = []
STM32WL55CCUx = []
STM32H750XBHx = []
STM32L443CCUx = []
STM32H725IGTx = []
STM32F777VITx = []
STM32L021K4Tx = []
STM32C071K8UxN = []
STM32U073RBIx = []
STM32U545REIxQ = []
STM32L4A6VGTxP = []
STM32L041C4_6Tx = []
STM32MP255DAIx = []
STM32F207IC_E_F_GTx = []
STM32U595VITx = []
STM32U375RGYxQ = []
STM32H503KBUx = []
STM32C091KBUx = []
STM32L162RETx = []
STM32L041K6Tx = []
STM32MP257FALx = []
STM32MP135AAFx = []
STM32U031R8Tx = []
STM32C092KCUx = []
STM32F030K6Tx = []
STM32L162QCHx = []
STM32H562AGIx = []
STM32L452RC_ETx = []
STM32F410T8_BYx = []
STM32F031F4_6Px = []
STM32G414CBTx = []
STM32MP231AAJx = []
STM32H7A3LG_IHxQ = []
STM32F100V8_BTx = []
STM32L562RETxP = []
STM32U535CBTx = []
STM32U595VJTxQ = []
STM32F767IG_ITx = []
STM32G041J6Mx = []
STM32MP153FAAx = []
STM32L151C6_8_BTxA = []
STM32U575CIUxQ = []
STM32U083CCUx = []
STM32L562QEIx = []
STM32L071CB_ZUx = []
STM32MP157DACx = []
STM32H7B3IITxQ = []
STM32L073CB_ZUx = []
STM32U585RITx = []
STM32L412KBUx = []
STM32L496VGYxP = []
STM32G0B1RB_C_ETx = []
STM32F730V8Tx = []
STM32U535CBUx = []
STM32F429ZITx = []
STM32F756VGHx = []
STM32U575CGUxQ = []
STM32L433CB_CUx = []
STM32C091CCUx = []
STM32F103C8_BTx = []
STM32MP153CAAx = []
STM32F778AIYx = []
STM32U535RETxQ = []
STM32U535VCIxQ = []
STM32H733VGTx = []
STM32U575ZGTxQ = []
STM32L443VCTx = []
STM32H562IITx = []
STM32U5A5QIIxQ = []
STM32L476ME_GYx = []
STM32U375VGIx = []
STM32U535VEIx = []
STM32F439ZG_ITx = []
STM32H7A3IG_IKxQ = []
STM32G441KBTx = []
STM32G431RBTxZ = []
STM32L052K6_8Tx = []
STM32G473MB_C_ETx = []
STM32U535CBUxQ = []
STM32MP257CALx = []
STM32G484CETx = []
STM32L072V8Ix = []
STM32H7S7I8Kx = []
STM32L152C6_8_BUx = []
STM32L476ZGTxP = []
STM32L412K8Tx = []
STM32WB15CCYx = []
STM32H573AIIxQ = []
STM32F733VETx = []
STM32U073R8Tx = []
STM32F205RE_GYx = []
STM32F038C6Tx = []
STM32L151CCUx = []
STM32G0B0CETx = []
STM32G0B1KB_C_ETxN = []
STM32L471ZE_GTx = []
STM32U599ZIYxQ = []
STM32F427IG_ITx = []
STM32L433RB_CTx = []
STM32F479AG_IHx = []
STM32F439ZG_IYx = []
STM32H725IETx = []
STM32U375CEYxQ = []
STM32F746NGHx = []
STM32L443RCIx = []
STM32L552CC_EUx = []
STM32L071C8Ux = []
STM32G071C6_8_BTx = []
STM32H725REVx = []
STM32G071K6_8_BTx = []
STM32G411K6Tx = []
STM32G071C6_8_BUx = []
STM32G071RBIx = []
STM32MP131DAFx = []
STM32H745IIKx = []
STM32F100RC_D_ETx = []
STM32U073CCUx = []
STM32U385RGTxQ = []
STM32MP157AABx = []
STM32L431RB_CIx = []
STM32F378VCHx = []
STM32H563VITx = []
STM32F412ZE_GJx = []
STM32L021F4Ux = []
STM32L562CETx = []
STM32U575CIUx = []
STM32L4A6VGYx = []
STM32F303R6_8Tx = []
STM32L071CB_ZYx = []
STM32H7R7Z8Jx = []
STM32H7R3L8HxH = []
STM32L151RCTx = []
STM32MP251DAKx = []
STM32WLE4CBUx = []
STM32L152R6_8_BHxA = []
STM32L011K3_4Ux = []
STM32L151QCHx = []
STM32L412C8Ux = []
STM32H7A3ZG_ITx = []
STM32L052T8Fx = []
STM32H7S3L8HxH = []
STM32MP233DALx = []
STM32C031C4_6Tx = []
STM32L4P5QGIxS = []
STM32MP133FAEx = []
STM32U385RGYxG = []
STM32MP235FAJx = []
STM32G041K6_8Ux = []
STM32L151V8_BTx = []
STM32MP135DAGx = []
STM32L451RC_EIx = []
STM32MP253CAJx = []
STM32L010R8Tx = []
STM32L4A6AGIx = []
STM32H7B3QIYxQ = []
STM32L475RC_E_GTx = []
STM32MP153FACx = []
STM32L071CB_ZTx = []
STM32H723ZEIx = []
STM32F767VIHx = []
STM32MP257AALx = []
STM32L552CEUxP = []
STM32U599ZITxQ = []
STM32L073V8Ix = []
STM32L431RB_CYx = []
STM32L4R5AIIxP = []
STM32MP157FABx = []
STM32F103VF_GTx = []
STM32C091FBPx = []
STM32L4P5RG_ETx = []
STM32F071CBYx = []
STM32F746VETx = []
STM32MP257DAKx = []
STM32F723VC_ETx = []
STM32L083RB_ZHx = []
STM32MP151FABx = []
STM32L072CZEx = []
STM32H7S7L8Hx = []
STM32F417VE_GTx = []
STM32G411CBUx = []
STM32L552MEYxP = []
STM32N647B0HxQ = []
STM32L4P5QG_EIx = []
STM32F722RC_ETx = []
STM32H573IITx = []
STM32F334C8Yx = []
STM32F103ZC_D_EHx = []
STM32L443RCYx = []
STM32L152VDTxX = []
STM32F072C8_BUx = []
STM32WB55VCQx = []
STM32L151VETx = []
STM32L072VB_ZIx = []
STM32F098CCUx = []
STM32F100R4_6Tx = []
STM32H7B3NIHx = []
STM32F401CD_EYx = []
STM32MP253DAIx = []
STM32F042F4Px = []
STM32H745ZITx = []
STM32L011F3_4Ux = []
STM32F429BE_G_ITx = []
STM32H7R3L8Hx = []
STM32L4S7AIIx = []
STM32U575RITxQ = []
STM32F051K6Tx = []
STM32G4A1REIx = []
STM32U5G9ZJTxQ = []
STM32U535VCIx = []
STM32H745ZGTx = []
STM32F078CBUx = []
STM32U575QIIxQ = []
STM32L4R5QIIxP = []
STM32L496VE_GTx = []
STM32L081KZUx = []
STM32L451RC_EYx = []
STM32F378RCTx = []
STM32F401CB_CYx = []
STM32F407ZE_GTx = []
STM32G081RBIx = []
STM32L496RE_GTx = []
STM32WBA54KGUx = []
STM32F042T6Yx = []
STM32L552RETxP = []
STM32F722IC_ETx = []
STM32C051C8Ux = []
STM32MP151AABx = []
STM32C071RBIxN = []
STM32L073VB_ZIx = []
STM32G483METx = []
STM32H730ZBTx = []
STM32H735RGVx = []
STM32C092RBTx = []
STM32L083V8Tx = []
STM32MP153DADx = []
STM32H755IITx = []
STM32U5F9ZJJxQ = []
STM32MP153CABx = []
STM32L152ZETx = []
STM32C051K6Ux = []
STM32U585ZITxQ = []
STM32U599BJYxQ = []
STM32G411RCTx = []
STM32F733ZETx = []
STM32U5A9ZJTxQ = []
STM32H725ZGTx = []
STM32MP133CAFx = []
STM32L052C6_8Ux = []
STM32U083MCTx = []
STM32MP231DAJx = []
STM32H757IITx = []
STM32H730ABIxQ = []
STM32L433RCTxP = []
STM32MP151CACx = []
STM32F469IE_G_IHx = []
STM32L471ZE_GJx = []
STM32F412ZE_GTx = []
STM32L431KB_CUx = []
STM32U375CEUxQ = []
STM32H503CBTx = []
STM32G0C1CC_ETx = []
STM32U545VEIxQ = []
STM32H7S7L8HxH = []
STM32WB55VCYx = []
STM32L412C8Tx = []
STM32U585QIIxQ = []
STM32F756BGTx = []
STM32U535CCUx = []
STM32C071KBTx = []
STM32U385CGUx = []
STM32G483MEYx = []
STM32F102R4_6Tx = []
STM32MP135FAGx = []
STM32H742XG_IHx = []
STM32F446ZC_ETx = []
STM32F105V8_BHx = []
STM32F302ZD_ETx = []
STM32H563VGTx = []
STM32H7S3Z8Tx = []
STM32L476VC_E_GTx = []
STM32L451VC_ETx = []
STM32L041K6Ux = []
STM32C011D6Yx = []
STM32H7B0ZBTx = []
STM32C091GBUx = []
STM32F722VC_ETx = []
STM32F303K6_8Tx = []
STM32L443CCFx = []
STM32H725AGIx = []
STM32L4R5VG_ITx = []
STM32H563MIYxQ = []
STM32L011G3_4Ux = []
STM32L052T6_8Yx = []
STM32H573ZITx = []
STM32F373V8_B_CHx = []
STM32G484VETx = []
STM32L152VCHx = []
STM32G0B0VETx = []
STM32L151VCTxA = []
STM32F042F6Px = []
STM32F100R8_BHx = []
STM32H7R3Z8Jx = []
STM32F439NG_IHx = []
STM32F103R4_6Tx = []
STM32G070CBTx = []
STM32WBA5MJGHx = []
STM32F101RBHx = []
STM32U545JEYxQ = []
STM32L152ZDTx = []
STM32L4S5AIIx = []
STM32C091KCUx = []
STM32F405OE_GYx = []
STM32G473VB_C_EHx = []
STM32L552RETxQ = []
STM32L412RBIx = []
STM32U5G7VJTxQ = []
STM32U5F7VJTxQ = []
STM32L051R6_8Hx = []
STM32L081KZTx = []
STM32F101RF_GTx = []
STM32L412T8Yx = []
STM32F072R8_BTx = []
STM32F732ZETx = []
STM32WL54CCUx = []
STM32MP231FAJx = []
STM32U073RBTx = []
STM32F427VG_ITx = []
STM32L073RB_ZTx = []
STM32H523VCIx = []
STM32F042C4_6Ux = []
STM32F479VG_ITx = []
STM32C071FBPxN = []
STM32F398VETx = []
STM32L443VCIx = []
STM32L083RB_ZTx = []
STM32U595ZITx = []
STM32F407IE_GTx = []
STM32F302RB_CTx = []
STM32F301K6_8Tx = []
STM32L4A6QGIxP = []
STM32H733ZGIx = []
STM32F217VE_GTx = []
STM32L073RZIx = []
STM32F051C4Tx = []
STM32L552CETxP = []
STM32G483CETx = []
STM32U595ZJYxQ = []
STM32WBA52KGUx = []
STM32F103VC_D_ETx = []
STM32G4A1VETx = []
STM32MP231DAKx = []
STM32L162RDYx = []
STM32F412VE_GTx = []
STM32C091FCPx = []
STM32L552QEIx = []
STM32C031K4_6Ux = []
STM32L052R6_8Tx = []
STM32U5F7VITxQ = []
STM32F410C8_BUx = []
STM32U083KCUx = []
STM32F405VGTx = []
STM32H725IEKx = []
STM32MP157DABx = []
STM32H563IITxQ = []
STM32F723IC_ETx = []
STM32F051R6Tx = []
STM32G0B1CB_C_EUxN = []
STM32L082CZYx = []
STM32L4Q5QGIxP = []
STM32U073M8Ix = []
STM32F479IG_ITx = []
STM32F411VC_EHx = []
STM32WB07KCVx = []
STM32F091CB_CUx = []
STM32F091VCHx = []
STM32H723VEHx = []
STM32L4A6VGYxP = []
STM32H523ZEJx = []
STM32L4P5VGTxP = []
STM32F446ZC_EJx = []
STM32F479BG_ITx = []
STM32F469IITx = []
STM32H750ZBTx = []
STM32H7B3IIKxQ = []
STM32F378VCTx = []
STM32U545VETxQ = []
STM32U545REIx = []
STM32L072RB_ZHx = []
STM32MP151FADx = []
STM32G0C1KC_EUx = []
STM32L073VB_ZTx = []
STM32G431C6_8_BUx = []
STM32G0B1VB_C_ETx = []
STM32F401CB_CUx = []
STM32H562RIVx = []
STM32G471MEYx = []
STM32WB55RCVx = []
STM32L011D3_4Px = []
STM32WB30CEUxA = []
STM32L486VGTx = []
STM32F302VB_CTx = []
STM32WLE4C8Ux = []
STM32U535CCTx = []
STM32L462RETx = []
STM32G411K8Tx = []
STM32U031K6Ux = []
STM32G411C8Tx = []
STM32G484RETx = []
STM32G070KBTx = []
STM32G411CCTx = []
STM32L053C6_8Ux = []
STM32MP251FAKx = []
STM32MP257AAIx = []
STM32F769AG_IYx = []
STM32F732IEKx = []
STM32L100C6UxA = []
STM32MP133CAEx = []
STM32F423VHTx = []
STM32G0B0KETx = []
STM32U5F9VITxQ = []
STM32WBA55CEUx = []
STM32L452VC_ETx = []
STM32MP231CALx = []
STM32H735IGTx = []
STM32L471RE_GTx = []
STM32L476ZGJx = []
STM32U031K4Ux = []
STM32L452CETx = []
STM32H723VETx = []
STM32F048C6Ux = []
STM32H735VGYx = []
STM32L152V8_BTx = []
STM32L476JGYxP = []
STM32F412RE_GYxP = []
STM32F767IG_IKx = []
STM32F733IETx = []
STM32L151CCTx = []
STM32F358CCTx = []
STM32L485JC_EYx = []
STM32WL33CBVx = []
STM32H7S3I8Kx = []
STM32MP153AADx = []
STM32G474MB_C_ETx = []
STM32H563RITx = []
STM32G0B1CB_C_ETx = []
STM32MP233DAKx = []
STM32H523VETx = []
STM32MP131AAFx = []
STM32L052K6_8Ux = []
STM32L422RBIx = []
STM32F415RGTx = []
STM32F777VIHx = []
STM32L152V8_BHx = []
STM32N657L0HxQ = []
STM32F469NE_GHx = []
STM32L412CBUx = []
STM32F334C4_6_8Tx = []
STM32U595ZIYxQ = []
STM32MP135CAEx = []
STM32U073MCIx = []
STM32MP257DAIx = []
STM32L4A6VGTx = []
STM32G0B0RETx = []
STM32L152C6_8_BTx = []
STM32F100C8_BTx = []
STM32F767NG_IHx = []
STM32H7B3VIHx = []
STM32WLE5JBIx = []
STM32L433CB_CTx = []
STM32L4Q5CGTx = []
STM32F038E6Yx = []
STM32F417IE_GTx = []
STM32U031F4Px = []
STM32F765BG_ITx = []
STM32U599ZJYxQ = []
STM32C091CCTx = []
STM32L083V8Ix = []
STM32F429NIHx = []
STM32U595ZJTxQ = []
STM32U575AGIx = []
STM32F417IE_GHx = []
STM32MP157FADx = []
STM32F427ZG_ITx = []
STM32L412RBTxP = []
STM32F423CHUx = []
STM32U595AIHx = []
STM32F031E6Yx = []
STM32F103T4_6Ux = []
STM32F103R8_BHx = []
STM32G411RBTx = []
STM32G414RBTx = []
STM32U535JEYxQ = []
STM32MP131AAGx = []
STM32L041F6Px = []
STM32U073C8Ux = []
STM32MP255CAJx = []
STM32G041K6_8Tx = []
STM32H7B0IBKxQ = []
STM32U595RITxQ = []
STM32U535NEYxQ = []
STM32H7S3Z8Jx = []
STM32MP257FAJx = []
STM32L4A6ZGTxP = []
STM32F413MG_HYx = []
STM32G041Y8Yx = []
STM32H523HEYx = []
STM32U073CBTx = []
STM32G071EBYx = []
STM32L4R9ZG_IYx = []
STM32U5F9ZIJxQ = []
STM32H745XIHx = []
STM32H7A3IG_IKx = []
STM32H735VGTx = []
STM32F412CE_GUx = []
STM32L152ZCTx = []
STM32MP257AAJx = []
STM32L4Q5QGIx = []
STM32G081CBTx = []
STM32F105R8_B_CTx = []
STM32L4P5RGTxP = []
STM32U375VGIxQ = []
STM32L4S9ZITx = []
STM32WB55VYYx = []
STM32F373V8_B_CTx = []
STM32F756IGTx = []
STM32WBA54CEUx = []
STM32H562IIKx = []
STM32L162RCTxA = []
STM32WB06CCVx = []
STM32N655A0HxQ = []
STM32F423RHTx = []
STM32H7R7I8Tx = []
STM32F103VBIx = []
STM32H533VEIx = []
STM32G431R6_8_BIx = []
STM32F072CBYx = []
STM32L433CB_CYx = []
STM32C091RCIx = []
STM32G414CBUx = []
STM32H743BGTx = []
STM32F767ZITx = []
STM32L4R5QG_IIx = []
STM32MP135DAEx = []
STM32L443CCYx = []
STM32F078VBTx = []
STM32F469BE_G_ITx = []
STM32G030F6Px = []
STM32MP257FAIx = []
STM32G483PEIx = []
STM32MP233DAJx = []
STM32L100RCTx = []
STM32G070RBTx = []
STM32F302K6_8Ux = []
STM32F303VD_ETx = []
STM32U5A5VJTxQ = []
STM32H523VEIx = []
STM32MP133DAEx = []
STM32H755ZITx = []
STM32WBA55HEFx = []
STM32F101R8_BTx = []
STM32F469IE_GTx = []
STM32L072V8Tx = []
STM32F303VD_EHx = []
STM32F423ZHTx = []
STM32U535CEUxQ = []
STM32L010K4Tx = []
STM32G031C4_6_8Tx = []
STM32G441RBIx = []
STM32G071G8_BUxN = []
STM32L562VETx = []
STM32C071F8PxN = []
STM32U5A9BJYxQ = []
STM32WL33CCVx = []
STM32G4A1REYx = []
STM32MP131CAFx = []
STM32F030C8Tx = []
STM32U083RCIx = []
STM32H573MIYxQ = []
STM32U083MCIx = []
STM32L031G4_6Ux = []
STM32U385RGIx = []
STM32F038F6Px = []
STM32C071CBUxN = []
STM32F405ZGTx = []
serde = ["dep:serde"]
